--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,9 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+			<p>Coucou j'ai fait une modification dans le fichier hello</p>
+		</div>
+		
 	</body>
 </html>
