--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- description -->
 		<div>
+			<h1>Ma phrase ajout&eacute;e</h1>
 			<p>Coucou j'ai fait une modification dans le fichier hello</p>
+		</div>
+
+		<!-- recompense -->
+		<div>
+			<h1>Mes r&eacute;compense</h1>
+			<p>En construction</p>
 		</div>
 		
 	</body>
