ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -29,5 +29,11 @@
 			<p>En construction</p>
 		</div>
 		
-	</body>
+		<!-- recompense -->
+		<div>
+			<h1>Mon gist</h1>
+			<p><script src="https://gist.github.com/NicolasCelerier1/2a7f3269a40e869b6a9b961ca1aec541.js"></script>
+</p>
+		</div>
+			</body>
 </html>
