ajout 1ere commande

--- a/hello.html
+++ b/hello.html
@@ -35,5 +35,12 @@
 			<p><script src="https://gist.github.com/NicolasCelerier1/2a7f3269a40e869b6a9b961ca1aec541.js"></script>
 </p>
 		</div>
+		
+		<!-- commandes git -->
+		<div>
+			<h1>mes commandes git</h1>
+			<p> git add .</p>
+		</div>
+		
 			</body>
 </html>
